# Glass

./: CONTRIBUTING.md  Cargo.toml  README.md  typos.toml
.github/workflows/: build-windows.yml  compare_perf.yml  release_glass.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/keymaps/macos/: atom.json  jetbrains.json  textmate.json
assets/settings/: default.json
crates/acp_thread/src/: diff.rs
crates/acp_tools/src/: acp_tools.rs
crates/agent/src/: thread.rs
crates/agent_settings/src/: agent_settings.rs
crates/agent_ui/src/: agent_diff.rs  agent_panel.rs  agent_ui.rs  conversation_view.rs  inline_assistant.rs  mention_set.rs  message_editor.rs  sidebar.rs  text_thread_editor.rs  thread_import.rs  (+3 more)
crates/app_runtime/: Cargo.toml
crates/app_runtime_ui/: Cargo.toml
crates/app_runtime_ui/src/: app_runtime_ui.rs  runtime_actions_modal.rs  runtime_execution.rs  runtime_execution_page.rs
crates/auto_update_helper/: build.rs
crates/browser/: Cargo.toml
crates/file_finder/: Cargo.toml
crates/git_ui/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/service_hub/: Cargo.toml
crates/service_hub_ui/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/sidebar/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/ui/: Cargo.toml
crates/workspace/: Cargo.toml
crates/workspace_chrome/: Cargo.toml
crates/workspace_chrome/src/: mode_control.rs  sidebar_row.rs  workspace_chrome.rs
crates/workspace_modes/: Cargo.toml
crates/workspace_modes/src/: mode_view_registry.rs  workspace_modes.rs
crates/zed/: Cargo.toml  build.rs
docs/: README.md
docs/src/: SUMMARY.md
nix/: build.nix
script/: setup-windows-dev.ps1
(+147 files in other folders)
