[package]
name = "app_runtime_ui"
description = "UI entry points for app runtime actions"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/app_runtime_ui.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
app_runtime.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
language.workspace = true
menu.workspace = true
multi_buffer.workspace = true
picker.workspace = true
project.workspace = true
task.workspace = true
ui.workspace = true
util.workspace = true
uuid.workspace = true
workspace.workspace = true
